<resources>
    <string name="app_name">CCompany</string>
    <string name="login">Please log in to continue</string>
    <string name="username">E-mail</string>
    <string name="password">Password</string>
    <string name="login_button">Login</string>
    <string name="register_button">Sign Up</string>
    <string name="name">Name</string>
    <string name="register">Register your account</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="open_in_maps">Open in Maps</string>
    <string name="company_logo">Company Logo</string>
    <string name="phone">Call now</string>
    <string name="description">Description</string>
    <string name="address">Address</string>
    <string name="logout">Logout</string>
</resources>
